Squash and Merge /fix/container-testing

--- a/src/ui-components/action-sheet.scss
+++ b/src/ui-components/action-sheet.scss
@@ -63,7 +63,7 @@
 }
 
 li.dropdown-footer {
-  padding: 8px 8px 0;
+  padding: 0 8px 0;
 }
 
 li.dropdown-header {
